<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="web_client_ID" translatable="false">1079978725212-a42ha36qd46b7g85b8tgjof09jm7vejr.apps.googleusercontent.com</string>

    <string name="facebook_app_id" translatable="false">2021838118290592</string>
    <string name="facebook_client_token" translatable="false">1e8864f46ab8d2c4a23e06634a7e1dc8</string>
    <string name="app_label" translatable="false">SchoolMobileApp</string>
    <string name="search_hint">Search Events</string>
    <string name="login">Login to Your Account</string>
    <string name="loginButton">Login</string>
    <string name="register">Register<sup>+</sup></string>
    <string name="registerButton">Register</string>
    <string name="alt_signin_info">or sign in with</string>
    <string name="forgotPassword">forgot password?</string>

    <string name="passwordCriteria1">Password must contain at least 8 characters</string>
    <string name="passwordCriteria2">Password must contain at least one uppercase letter</string>
    <string name="fillAllFields">Please fill out all the fields!</string>
    <string name="invalidEmail">Please enter a valid email</string>
    <string name="passwordsDontMatch">Passwords do not match!</string>
    <string name="filters">Filters</string>
    <string name="filter_misc">Miscellaneous</string>
    <string name="filter_sports">Sports</string>
    <string name="filter_music">Music</string>
    <string name="filter_artsntheatre">Arts and Theatre</string>
    <string name="filter_film">Films</string>
    <string name="filter_non_ticket">Nonticket</string>

    <string name="loginRegister">Do not have an account? <u>Register here.</u></string>

    <string name="addReminder">Set a reminder</string>
    <string name="removeReminder">Remove the reminder</string>
    <string name="joinEvent">Join this event</string>
    <string name="leaveEvent">Leave this event</string>

    <string name="channel_name" translatable="false">MyChannel</string>
    <string name="channel_description" translatable="false">Default</string>
    <string name="channelId" translatable="false">MyNotChannel</string>

    <string name="notificationSettings">Notifications</string>
    <string name="profileSettings">Profile</string>
    <string name="eventPreferences">Event Preferences</string>
    <string name="myFavs">My Liked Events</string>

    <string name="changeEmailSetting">Change your info and press the submit button beside it</string>

    <string name="wantsNotifiction">I want to receive notifications</string>
    <string name="upcomingEventNotification">I want to receive notifications about upcoming events</string>
    <string name="newEventsNotifications">I want to receive an update when there is new event in my interests</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="navigateToEvent">Navigate</string>
    <string name="eventStartsAt">Event starts at : </string>
    <string name="eventSales">On Sale through : </string>
    <string name="eventWebsite">Event site</string>
    <string name="venueDetails">Venue Details</string>
    <string name="eventDetails">Details</string>

    <string name="mainFabText">See events on the map</string>
    <string name="clearFilters">Clear Filters</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="save_setting">Save</string>

    <string name="registerSuccess">Register Successful!</string>

    <string name="detailsComments">Comments and Ratings</string>
    <string name="user">User</string>

    <string name="forgotPasswordActivity">Forgot Password</string>
</resources>